--- a/build.xml
+++ b/build.xml
@@ -1,188 +1,271 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE project>
-<project name="power-posts" default="build">
+<project name="sun-corp-website-redesign" default="build">
+  <!-- By default, we assume all tools to be on the $PATH -->
 
-  <property name="toolsdir" value="${basedir}/vendor/bin/"/>
+  <!-- bootstrap target, to ensure the ant-contrib jar is available -->
+  <target name="bootstrap">
+    <mkdir dir="${user.home}/.ant/lib"/>
+    <!-- <get dest="${user.home}/.ant/lib/ant-contrib.jar"
+      src="http://search.maven.org/remotecontent?filepath=ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar" /> -->
+      <get dest="${user.home}/.ant/lib/jsch-0.1.51.jar"
+        src="http://sourceforge.net/projects/jsch/files/jsch.jar/0.1.51/jsch-0.1.51.jar" />
+  </target>
 
+
+  <!-- initialize the build system -->
+  <target name="init" description="initializes the build system">
+    <exec executable="git" dir="${basedir}" outputproperty="build.hash">
+      <arg value="log" />
+      <arg value="--format=%H" />
+      <arg value="-n 1" />
+    </exec>
+
+    <tstamp>
+      <format property="build.date" pattern="MM/dd/yyyy hh:mm aa" offset="0" unit="hour"/>
+    </tstamp>
+
+    <!-- Local properties -->
+    <property name="build.tools" value="${basedir}/vendor/bin/"/>
+    <property name="build.dir" value="${basedir}/build/html" />
+    <property name="build.year" value="2014" />
+    <property name="build.theme" value="${basedir}/build/html/wp-content/themes/${ant.project.name}" />
+    <property name="build.plugin" value="${basedir}/build/html/wp-content/plugins/${ant.project.name}" />
+    <property name="ant.project.version" value="1.3.0" />
+
+  </target>
+
+  <target name="debug" depends="init">
+    <echoproperties />
+  </target>
+
+<!-- depends="prepare,lint,compass,update-local-copy,update-doc-blocks,create-zip-file" -->
   <target name="build"
-         depends="prepare,lint,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci,phpunit,phpdox"
-         description="">
-    <!-- copy the plugin -->
-    <copy todir="${basedir}/build/html/wp-content/plugins/${ant.project.name}">
-        <fileset dir="${basedir}/src/">
-            <exclude name="**/*.java"/>
-        </fileset>
-    </copy>
-
-    <!-- only packaging up the theme. We could package up the whole site though ;) -->
-    <zip destfile="${basedir}/build/dist/power-posts.zip" basedir="${basedir}/src/" />
-
- </target>
-
- <target name="build-parallel"
-         depends="prepare,lint,tools-parallel,phpunit,phpdox"
+         depends="init,prepare,lint,compass,update-local-copy,update-doc-blocks, conform-to-wp-coding-standards, phpcs"
          description=""/>
 
- <target name="tools-parallel" description="Run tools in parallel">
-  <parallel threadCount="2">
-   <sequential>
-    <antcall target="pdepend"/>
-    <antcall target="phpmd-ci"/>
-   </sequential>
-   <antcall target="phpcpd-ci"/>
-   <antcall target="phpcs-ci"/>
-   <antcall target="phploc-ci"/>
-  </parallel>
- </target>
+  <!-- update the theme and plugin doc blocks -->
+  <target name="update-doc-blocks" description="Replaces placeholders in docblocks with appropriate values">
 
- <target name="clean"
-         unless="clean.done"
-         description="Cleanup build artifacts">
-  <delete dir="${basedir}/build/api"/>
-  <delete dir="${basedir}/build/coverage"/>
-  <delete dir="${basedir}/build/logs"/>
-  <delete dir="${basedir}/build/pdepend"/>
-  <delete dir="${basedir}/build/phpdox"/>
-  <delete file="${basedir}/build/dist/power-posts.zip" />
-  <property name="clean.done" value="true"/>
- </target>
+    <replace token="@build-version@" value="${ant.project.version}">
+      <fileset dir="${build.dir}">
+        <include name="${build.plugin}/**" />
+        <include name="${build.theme}/**" />
+        <modified />
+      </fileset>
+    </replace>
 
- <target name="prepare"
-         unless="prepare.done"
-         depends="clean"
-         description="Prepare for build">
-  <mkdir dir="${basedir}/build/api"/>
-  <mkdir dir="${basedir}/build/coverage"/>
-  <mkdir dir="${basedir}/build/logs"/>
-  <mkdir dir="${basedir}/build/pdepend"/>
-  <mkdir dir="${basedir}/build/phpdox"/>
-  <property name="prepare.done" value="true"/>
- </target>
+    <replace token="@build-year@" value="${build.year}">
+      <fileset dir="${build.dir}">
+        <include name="${build.plugin}/**" />
+        <include name="${build.theme}/**" />
+        <modified />
+      </fileset>
+    </replace>
 
- <target name="lint" description="Perform syntax check of sourcecode files">
-  <apply executable="php" failonerror="true">
-   <arg value="-l" />
+    <replace token="@build-name@" value="${ant.project.name}">
+      <fileset dir="${build.dir}">
+        <include name="${build.plugin}/**" />
+        <include name="${build.theme}/**" />
+        <modified />
+      </fileset>
+    </replace>
 
-   <fileset dir="${basedir}/src">
-    <include name="**/*.php" />
-    <modified />
-   </fileset>
+    <replace token="@build-hash@" value="${build.hash}">
+      <fileset dir="${build.theme}" />
+      <fileset dir="${build.plugin}" />
+    </replace>
 
-   <fileset dir="${basedir}/tests">
-    <include name="**/*.php" />
-    <modified />
-   </fileset>
-  </apply>
- </target>
+  </target>
 
- <target name="phploc"
-         description="Measure project size using PHPLOC and print human readable output. Intended for usage on the command line.">
-  <exec executable="${toolsdir}phploc">
-   <arg value="--count-tests" />
-   <arg path="${basedir}/src" />
-   <arg path="${basedir}/tests" />
-  </exec>
- </target>
+  <!-- Create the theme zip file -->
+  <target name="create-zip-file">
+    <zip destfile="${basedir}/build/dist/${ant.project.name}-${ant.project.version}.zip"
+         basedir="${build.theme}"
+    />
+  </target>
 
- <target name="phploc-ci"
-         depends="prepare"
-         description="Measure project size using PHPLOC and log result in CSV and XML format. Intended for usage within a continuous integration environment.">
-  <exec executable="${toolsdir}phploc">
-   <arg value="--count-tests" />
-   <arg value="--log-csv" />
-   <arg path="${basedir}/build/logs/phploc.csv" />
-   <arg value="--log-xml" />
-   <arg path="${basedir}/build/logs/phploc.xml" />
-   <arg path="${basedir}/src" />
-   <arg path="${basedir}/tests" />
-  </exec>
- </target>
+  <!-- Copy Files to local dev site -->
+  <target name="update-local-copy">
 
- <target name="pdepend"
-         depends="prepare"
-         description="Calculate software metrics using PHP_Depend and log result in XML format. Intended for usage within a continuous integration environment.">
-  <exec executable="${toolsdir}pdepend">
-   <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
-   <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
-   <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-   <arg path="${basedir}/src" />
-  </exec>
- </target>
+    <!-- Wordpress itself -->
+    <copy todir="${build.dir}">
+      <fileset dir="${basedir}/wordpress/" >
+        <exclude name="**/composer.json" />
+        <exclude name="**/license.txt" />
+        <exclude name="**/readme.html" />
+        <exclude name="**/wp-content/themes/" />
+      </fileset>
+    </copy>
 
- <target name="phpmd"
-         description="Perform project mess detection using PHPMD and print human readable output. Intended for usage on the command line before committing.">
-  <exec executable="${toolsdir}phpmd">
-   <arg path="${basedir}/src" />
-   <arg value="text" />
-   <arg path="${basedir}/build/phpmd.xml" />
-  </exec>
- </target>
+    <!-- The Theme -->
+    <copy todir="${build.theme}/">
+      <fileset dir="${basedir}/src/theme/">
+        <exclude name="**/.sass-cache/" />
+        <exclude name="**/sass/" />
+        <exclude name="**/config.rb" />
+      </fileset>
+    </copy>
 
- <target name="phpmd-ci"
-         depends="prepare"
-         description="Perform project mess detection using PHPMD and log result in XML format. Intended for usage within a continuous integration environment.">
-  <exec executable="${toolsdir}phpmd">
-   <arg path="${basedir}/src" />
-   <arg value="xml" />
-   <arg path="${basedir}/build/phpmd.xml" />
-   <arg value="--reportfile" />
-   <arg path="${basedir}/build/logs/pmd.xml" />
-  </exec>
- </target>
+    <!-- Custom Plugin -->
+    <copy todir="${build.plugin}">
+      <fileset dir="${basedir}/src/plugin" />
+    </copy>
 
- <target name="phpcs"
-         description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
-  <exec executable="${toolsdir}phpcs">
-   <arg value="--standard=PSR2" />
-   <arg value="--extensions=php" />
-   <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}/src" />
-   <arg path="${basedir}/tests" />
-  </exec>
- </target>
+    <!-- copy configuration files -->
+    <copy toDir="${build.dir}">
+      <fileset dir="${basedir}">
+        <include name="**/wp-config.php" />
+        <include name="**/.htaccess" />
+        <include name="**/favicon.ico" />
+        <exclude name="**/build/" />
+        <exclude name="**/src/" />
+        <exclude name="**/test/" />
+      </fileset>
+    </copy>
+<!--
+    <chmod perm="777">
+      <fileset dir="${build.theme}/css/skins" />
+      <fileset dir="${build.dir}/wp-content/uploads" />
+    </chmod>
+ -->
+  </target>
 
- <target name="phpcs-ci"
-         depends="prepare"
-         description="Find coding standard violations using PHP_CodeSniffer and log result in XML format. Intended for usage within a continuous integration environment.">
-  <exec executable="${toolsdir}phpcs" output="/dev/null">
-   <arg value="--report=checkstyle" />
-   <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
-   <arg value="--standard=PSR2" />
-   <arg value="--extensions=php" />
-   <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}/src" />
-  </exec>
- </target>
+  <!-- Clean up the artifact folders -->
+  <target name="clean" unless="clean.done" description="Cleanup build artifacts" depends="init">
+    <delete includeEmptyDirs="true">
+      <fileset dir="${basedir}/build/html/">
+        <include name="*/" />
+        <exclude name="wp-content/uploads/" />
+        <exclude name="wp-content/plugins/" />
+      </fileset>
+    </delete>
 
- <target name="phpcpd"
-         description="Find duplicate code using PHPCPD and print human readable output. Intended for usage on the command line before committing.">
-  <exec executable="${toolsdir}phpcpd">
-   <arg path="${basedir}/src" />
-  </exec>
- </target>
+    <property name="clean.done" value="true"/>
+  </target>
 
- <target name="phpcpd-ci"
-         depends="prepare"
-         description="Find duplicate code using PHPCPD and log result in XML format. Intended for usage within a continuous integration environment.">
-  <exec executable="${toolsdir}phpcpd">
-   <arg value="--log-pmd" />
-   <arg path="${basedir}/build/logs/pmd-cpd.xml" />
+  <!-- Create the artifact folders -->
+  <target name="prepare"
+      unless="prepare.done"
+      depends="clean"
+      description="Prepare for build">
+    <mkdir dir="${basedir}/build/api"/>
+    <mkdir dir="${basedir}/build/coverage"/>
+    <mkdir dir="${basedir}/build/logs"/>
+    <property name="prepare.done" value="true"/>
+  </target>
+
+  <!-- compiles the scss files into css -->
+  <target name="compass" description="compass compilation">
+    <exec dir="${basedir}/src/theme" executable="compass">
+     <arg value="compile" />
+    </exec>
+  </target>
+
+  <target name="lint" description="Perform syntax check of sourcecode files">
+    <apply executable="php" failonerror="true">
+      <arg value="-l" />
+
+      <fileset dir="${basedir}/src">
+        <include name="**/*.php" />
+        <modified />
+      </fileset>
+    </apply>
+  </target>
+
+  <target name="phploc"
+      depends="init"
+      description="Measure project size using PHPLOC and print human readable output.">
+  <exec executable="${build.tools}phploc">
    <arg path="${basedir}/src" />
   </exec>
- </target>
+  </target>
 
- <target name="phpunit"
-         depends="prepare"
-         description="Run unit tests with PHPUnit">
-  <exec executable="${toolsdir}phpunit" failonerror="true">
-   <arg value="--configuration"/>
-   <arg path="${basedir}/build/phpunit.xml"/>
-  </exec>
- </target>
 
- <target name="phpdox"
-         depends="phploc-ci,phpcs-ci,phpmd-ci"
-         description="Generate project documentation using phDox">
-  <exec executable="${toolsdir}phpdox" dir="${basedir}/build" />
- </target>
+  <target name="phpcs"
+      depends="init"
+      description="Find coding standard violations using PHP_CodeSniffer and print human readable output. ">
+    <exec executable="${build.tools}phpcs">
+     <arg value="--standard=build/project.ruleset.xml" />
+     <arg value="--extensions=php" />
+     <arg path="${build.plugin}" />
+    </exec>
+    <exec executable="${build.tools}phpcs">
+     <arg value="--standard=build/project.ruleset.xml" />
+     <arg value="--extensions=php" />
+     <arg path="${build.theme}" />
+    </exec>
+  </target>
+
+  <target name="phpcbf"
+      depends="init"
+      description="forces code cleanup">
+
+    <exec executable="${build.tools}phpcbf">
+     <arg value="--standard=build/project.ruleset.xml" />
+     <arg value="--extensions=php" />
+     <arg path="${build.plugin}" />
+
+    </exec>
+
+    <exec executable="${build.tools}phpcbf">
+     <arg value="--standard=build/project.ruleset.xml" />
+     <arg value="--ignore=src/theme/beopen*" />
+     <arg value="--extensions=php" />
+     <arg path="${build.theme}" />
+
+    </exec>
+
+  </target>
+
+
+  <target name="conform-to-wp-coding-standards"
+      depends="init"
+      description="adjust build code to conform to Wordpress coding standards">
+
+    <!-- replace the 4 space soft tab with a hard tab character -->
+    <fixcrlf srcdir="${build.plugin}"
+        includes="**/*.php"
+        tab="add"
+        tablength="2"
+        encoding="utf-8"
+        outputencoding="utf-8"
+        eol="lf"
+        eof="remove"
+        fixlast="true"
+        javafiles="no"
+        />
+
+    <!-- replace the 4 space soft tab with a hard tab character -->
+    <fixcrlf srcdir="${build.theme}"
+        includes="**/*.php"
+        tab="add"
+        tablength="2"
+        encoding="utf-8"
+        outputencoding="utf-8"
+        eol="lf"
+        eof="remove"
+        javafiles="no"
+        excludes="**/lib/*"
+        excludesfile="${build.theme}/lib/activation.php"
+        fixlast="true" />
+
+  </target>
+
+
+  <target name="deploy-testing" description="deploy build code to the testing environment">
+    <ftp server="corporate.sunrail.com"
+         port="21"
+         verbose="true"
+         remotedir="/var/www/testing/"
+         userid="evolve"
+         password="Ev0lv3T0d@y14"
+         passive="yes"
+         depends="yes"
+         binary="no">
+      <fileset dir="build/html">
+        <include name="**/*"/>
+      </fileset>
+    </ftp>
+  </target>
+
 </project>
