--- a/build.xml
+++ b/build.xml
@@ -30,13 +30,13 @@
     <property name="build.dir" value="${basedir}/build/html" />
     <property name="build.year" value="2014" />
     <property name="build.plugin" value="${basedir}/build/html/wp-content/plugins/${ant.project.name}" />
-    <property name="ant.project.version" value="1.3.0" />
+    <property name="ant.project.version" value="1.0.0" />
 
   </target>
 
   <!-- the default build target -->
   <target name="build"
-         depends="prepare, init, lint, update-local-copy, update-doc-blocks, conform-to-wp-coding-standards, phpcs"
+         depends="prepare, init, lint, update-local-copy, update-doc-blocks, conform-to-wp-coding-standards"
          description="the default build target"/>
 
   <!-- update the theme and plugin doc blocks -->
@@ -144,6 +144,7 @@
     </apply>
   </target>
 
+  <!-- PHPLOC - PHP Complexity Analyzer -->
   <target name="phploc"
       depends="init"
       description="Measure project size using PHPLOC and print human readable output.">
@@ -152,7 +153,7 @@
     </exec>
   </target>
 
-
+  <!-- PHPCS - Code Sniffer -->
   <target name="phpcs"
       depends="init"
       description="Find coding standard violations using PHP_CodeSniffer and print human readable output. ">
@@ -163,7 +164,7 @@
     </exec>
   </target>
 
-
+  <!-- PHPCBF - the script that enforces PHPCS -->
   <target name="phpcbf"
       depends="init"
       description="forces code cleanup">
@@ -194,6 +195,5 @@
         javafiles="no"
         />
   </target>
-
 
 </project>
